$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-32 (opened May 30, 2011)

	* vegdist docs: Brian Inouye informed us that we are not
	calculating the Raup-Crick index like originally suggested: we use
	equal probabilities for all species, but the species probabilities
	should vary with their frequencies. Doing this would break
	vegdist.c design, and require Fisher's non-central hypergeometric
	distribution, and that is not available in base R. However, it
	seems that a simulation version could be implemented in
	oecosimu(). Now we document the problems in vegdist.Rd, but do not
	correct the behaviour. The key paper is available over
	http://www.esajournals.org/doi/full/10.1890/ES10-00117.1

	* rda & capscale: similar changes as in cca in r1517 (version
	1.18-24). CA component is always returned, even with zero rank,
	and CCA and pCCA components are NULL only if they were not
	specified originally, and if they become zero rank because of
	aliasing etc, they are returned as zero components (instead of
	NULL). 

	* print of cca/rda/capscale: do not "Proportion" column in
	unconstrained ordination which only has one component. However,
	this will be printed also with zero pCCA or CCA (but not with
	NULL). 
	
Version 1.18-31 (closed May 30, 2011)

	* ordiR2step: more informative about rejecting 'scope': partial
	models are not (currently) accepted due to the design of
	RsquareAdj.rda().

	* specnumber: gained argument 'groups' to find total richness
	within each group. An example shows how to use this to find one
	index that Whittaker suggested to estimate beta diversity.

	* capscale: species scores will be NA if input data were
	dissimilarities and no 'comm' was given. update(capscale_result)
	failed because LHS data were evaluated in the
	environment(formula).  Now removed the explicit environment: I ran
	some tests and found no problems, but let's see what the real life
	brings along. The changed point is commented so that this change